Using valueOf instead of generating new Integer instances : faster and saves memory